# Nash_Hunger

./: README.md  food_trading_environment_requirements.md  food_trading_survival_game_prd.md
backend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: config.ts  index.ts  rooms.ts  socket.ts  types.ts
backend/src/game/: bot.ts  death.ts  (+5 more)
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EventLog.tsx  FoodRowsGrid.tsx  GameOverModal.tsx  Lobby.tsx  Logo.tsx  OpponentsRow.tsx  OrderBookGrid.tsx  OrderBookView.tsx  OrderEntry.tsx  OrderEntryGrid.tsx  OwnOrders.tsx  PlayerHandBanner.tsx  PlayerPanel.tsx  RecentTrades.tsx  ResourcesPanel.tsx  TimerBar.tsx  TradeHistoryTable.tsx
frontend/hooks/: useGameState.ts  useIsMobile.ts
frontend/lib/: socket.ts  types.ts
research/: GREEDY_BOT.md  README.md  pyproject.toml  run_batch.py  run_game.py  watch_game.py
research/agents/: __init__.py  base.py  buffer_agent.py  greedy_agent.py  noop_agent.py  old_greedy_agent.py  random_agent.py
research/env/: __init__.py  actions.py  config.py  env.py  logging.py  market.py  observation.py  rng.py  setup.py  tick.py  types.py
research/nash_hunger_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research/parity/: run_python.py  run_ts.py  scenario.py
research/tests/: test_determinism.py  test_greedy_agent.py  test_legal_actions.py  test_market.py  test_parity.py  test_setup.py  test_tick.py  test_winner.py
(+22 files in other folders)
